RESOLVED FIXED125822
Video element's width and height content attributes should not influence intrinsic width and height
https://bugs.webkit.org/show_bug.cgi?id=125822
Summary Video element's width and height content attributes should not influence intr...
Ryosuke Niwa
Reported 2013-12-16 18:35:57 PST
Video element's width and height content attributes should not influence intrinsic width and height
Attachments
Fixes the bug (5.67 KB, patch)
2013-12-16 18:40 PST, Ryosuke Niwa
darin: review+
rniwa: commit-queue-
Ryosuke Niwa
Comment 1 2013-12-16 18:40:51 PST
Created attachment 219380 [details] Fixes the bug
Eric Carlson
Comment 2 2013-12-17 09:23:36 PST
Note that the following comment in the test is incorrect: These tests assume that the default intrinsic width is 300x150, so that the default intrinsic ratio is 2:1. This is no longer per spec, but is what is implemented. The intrinsic width and height of a <video> element is 300x150 if poster and media file dimensions are unavailable: http://www.w3.org/TR/2013/WD-html51-20130528/embedded-content-0.html#concept-video-intrinsic-width
Ryosuke Niwa
Comment 3 2013-12-17 11:43:49 PST
Comment on attachment 219380 [details] Fixes the bug Oops, let me correct that comment.
Ryosuke Niwa
Comment 4 2013-12-17 16:13:12 PST
Note You need to log in before you can comment on or make changes to this bug.