Video element's width and height content attributes should not influence intrinsic width and height https://bugs.webkit.org/show_bug.cgi?id=125822

Reviewed by Darin Adler.

Source/WebCore:

Merge https://chromium.googlesource.com/chromium/blink/+/022ce34efb5b70cb964c3ca29f23c8980ffaef05

The width/height content attributes already influence specified style via
HTMLVideoElement::collectStyleForPresentationAttribute, to also influence the intrinsic size has never
been part of the spec: http://www.w3.org/TR/2013/WD-html51-20130528/embedded-content-0.html#dom-dim-width

The test case passes in Firefox Nightly and IE11 Release Preview, but fails in Opera Presto, which has
no default intrinsic size.

Test: media/video-intrinsic-width-height.html

* rendering/RenderVideo.cpp:
(WebCore::RenderVideo::calculateIntrinsicSize):

LayoutTests:

* media/video-intrinsic-width-height-expected.txt: Added.
* media/video-intrinsic-width-height.html: Added.


Canonical link: https://commits.webkit.org/143889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160734 268f45cc-cd09-0410-ab3c-d52691b4dbfc